tests/invalid_syntax/test_missing_rhs.aphi
/*
Demonstrates: Missing right-hand side
*/

int x;

procedure main {
    x = ;
}